# Belish

./: .gitignore  Belish 2  CMakeLists.txt  CMakeSettings.json  README.md  demo1.bel  expand-creator.py  lines.py  main.cpp  test.bel  test.belc  test.js  testmodule.bel  testmodule.belc
auto-library-creator/: main.bel
cppmodule/: CMakeLists.txt  libcppmodule.belib  library.cpp  library.h
doc/: DevelopmentRulers.md  DevelopmentRules.md  StandardSyntax.md  Suggestions-for-writing-high-speed-Beilsh-script.md  bytecode.md  errors.md  implemented-list.md  optimization-list.md  targets.md
include/: Belish.h  GC.h  arg.h  ast.h  compiler.h  decompile.h  dylib.h  fio.h  lex.h  timestamp.h  trans.h  types.h  valueTracker.h  values.h  vm.h
io/: CMakeLists.txt  libio.belib  library.cpp  library.h
myasmjit/: README.md
myasmjit/include/: MAsmJit.h  check-is-win.h
myasmjit/src/: MAsmJit.cpp
src/: Belish.cpp  GC.cpp  arg.cpp  ast.cpp  compiler.cpp  decompile.cpp  dylib.cpp  fio.cpp  lex.cpp  timestamp.cpp  trans.cpp  types.cpp  valueTracker.cpp  values.cpp  vm.cpp
